fix: overflow #47

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
 
 html {
   padding-right: 0 !important;
-  overflow-y: scroll !important;
+  overflow-y: auto !important;
 }
